Fix multiple operator bug and overflow issues

--- a/style.css
+++ b/style.css
@@ -32,13 +32,14 @@ body {
 }
 
 .display {
-    height: 40px;
+    height: auto;
     padding: 10px;
     border: 1px lightgray solid;
     border-radius: 10px;
     font-size: 32px;
     font-family: Arial, Helvetica, sans-serif;
     margin: 5px;
+    overflow-wrap: anywhere;
 }
 
 #enter {
